--- a/document-structure/tooltip/task.css
+++ b/document-structure/tooltip/task.css
@@ -1,4 +1,5 @@
 .has-tooltip {
+  position: relative;
   color: #000;
   background: yellow;
 }
@@ -8,7 +9,7 @@
 }
 
 .tooltip {
-  position: fixed;
+  position: absolute;
   display: none;
   background: black;
   padding: 5px;
@@ -18,4 +19,6 @@
 
 .tooltip_active {
   display: block;
+  left: 0; 
+  top: 14;
 }
